--- a/signup.html
+++ b/signup.html
@@ -9,6 +9,17 @@
 </head>
 <body>
 
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 50px;
+    }
+    h1 {
+      color: #4CAF50;
+    }
+  </style>
+  <h1>Welcome, <span id="username-display"></span>!</h1>
     
 
     <!-- Scoreboard Section (Tabulated) -->
@@ -61,21 +72,31 @@
         <button id="Restart">Restart</button>
     </div>
 
+    <p>You have successfully logged into <br>ISAAC's Tic tak Game.</p>
+
+
+
 
     <script src="isaAC.js"></script>
 
     <button id="logout-button">Log Out</button>
 
     <script>
+      // Display the username after login
+      document.addEventListener('DOMContentLoaded', function() {
+          const loggedInUser = JSON.parse(localStorage.getItem('loggedInUser'));
+          if (loggedInUser) {
+              document.getElementById('username-display').textContent = loggedInUser.username;
+          } else {
+              window.location.href = 'signup.html'; // Redirect if no user is logged in
+          }
+      });
+  
       // When the logout button is clicked, clear localStorage and redirect to the login page
       document.getElementById('logout-button').addEventListener('click', function() {
-          localStorage.removeItem('username');
-          localStorage.removeItem('password');
-          localStorage.removeItem('name');
-          window.location.href = 'signup.html'; // Redirect to login page (adjust the path accordingly)
+          localStorage.removeItem('loggedInUser');
+          window.location.href = 'signup.html'; // Redirect to login page
       });
     </script>
-    
-
 </body>
 </html>
