--- a/signup.html
+++ b/signup.html
@@ -88,7 +88,7 @@
           if (loggedInUser) {
               document.getElementById('username-display').textContent = loggedInUser.username;
           } else {
-              window.location.href = 'signup.html'; // Redirect if no user is logged in
+              window.location.href = 'index.html'; // Redirect if no user is logged in
           }
       });
   
